# NN4Soot

./: .gitignore  README.md  pyproject.toml  reproduce_all.py  reproduce_all_skip_pretraining.py  requirements.txt
_build/logs/: myst.build.json
configs/: mechanism_similarity_config.yaml  optimization_no_softmin_config.yaml  optimization_softmin_config.yaml  sensitivity_analysis_config.yaml  train_config.yaml
data/Kinetics_inputs_template/: input.dic  kinetics.CHEMKIN_base3pp.CKI
data/UF_set1/: Input_ArrheniusGlobal_noNH.txt  Soot_PSDs_Hp=0.50.csv  Soot_PSDs_Hp=0.70.csv  Soot_PSDs_Hp=1.00.csv  Soot_dia_Hp=0.50.csv  SplitFactors_UF=2_N=768_noNH.txt
data/UF_set2/: Soot_Exp_interpolated_psds_Hp=0.50.csv  Soot_PSDs_Hp=0.50.csv  Soot_PSDs_Hp=0.70.csv  Soot_PSDs_Hp=1.00.csv  SplitFactors_UF=5_N=768_noNH.txt
data/UF_set3/: Soot_Exp_interpolated_psds_Hp=0.70.csv  Soot_Exp_interpolated_psds_Hp=1.00.csv  Soot_PSDs_Hp=0.50.csv  Soot_PSDs_Hp=0.70.csv  Soot_PSDs_Hp=1.00.csv  SplitFactors_UF=10_N=768_noNH.txt  input.txt
examples/: 01_quick_start.py  02_train_your_model.py  03_sensitivity_analysis.py  04_optimization.py
nn4soot/: __init__.py
nn4soot/analysis/: __init__.py  combined_plots.py  mechanism_similarity.py  model_comparison.py
nn4soot/core/: __init__.py  (+5 more)
results/: model_comparison.xlsx
scripts/: 01_train_from_config.py  02_run_model_comparison.py  03_run_sensitivity_analysis.py  04_run_mechanism_similarity.py  05_run_optimization.py
tests/: __init__.py  test_active_subspace.py  test_data_loader.py  test_evaluator.py  test_models.py  test_trainer.py
(+619 files in other folders)
